# sherlock

./: .pre-commit-config.yaml  README.md  pyproject.toml
sherlock/: __init__.py  constants.py  instrumentation.py  log_filters.py  logging_filters.py  sleuth.py  utils.py
sherlock/integrations/: aws_lambda.py  fastapi.py  httpx.py  integration.py  requests.py  urllib3.py
sherlock/plugins/: base_plugin.py  sentry.py
tests/: test_aws_lambda.py  test_correlation_id_generator.py  test_fastapi.py  test_httpx.py  test_requests.py  test_threading.py
