[tool.poetry]
name = "sherlock"
version = "0.1.0"
description = "Your Sherlock to observe and add the missing correlation ID in the request & response headers."
authors = ["Akshat <akshat25iiit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
requests = "2.28.0"
pre-commit = "^3.6.2"
responses = "0.22.0"
fastapi = ">=0.88.0,<0.89.0"
httpx = "^0.27.0"
sentry-sdk = "^1.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
