[tool.poetry]
name = "sherlock"
version = "0.1.0"
description = "Your Sherlock to observe and add the missing correlation ID in the request & response headers."
authors = ["Akshat <akshat25iiit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
responses = "0.22.0"
fastapi = ">=0.88.0,<0.89.0"
httpx = "^0.27.0"
sentry-sdk = "^1.42.0"
python-json-logger = "^2.0.7"
ipython = [{ version = "7.x.x", python = ">=7,<8" }, { version = "8.x.x", python = ">=8" }]
boto3 = "^1.34.64"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
